# target-parquet

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
target_parquet/: __init__.py  sinks.py  target.py
target_parquet/utils/: __init__.py  parquet.py
tests/: __init__.py  test_core.py  test_e2e.py
tests/utils/: test_parquet.py
